<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.home.HomeFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search_bar"
        style="@style/Theme.MaterialComponents.DayNight.NoActionBar.TextInputLayoutCustomStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:animateLayoutChanges="true"
        android:hint="@string/search_request"
        app:endIconDrawable="@drawable/icon_search"
        app:endIconMode="custom"
        app:endIconTint="@color/black"
        app:hintTextColor="@color/black"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/search_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:inputType="textAutoCorrect"
            android:maxLength="30"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:visibility="gone" />

    </com.google.android.material.textfield.TextInputLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="60dp"
        android:fillViewport="true"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_new"
                style="@style/TextAppearance.AppCompat.BasicTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/the_new"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_interesting_photo"
                style="@style/TextAppearance.AppCompat.BasicTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/may_interest"
                app:layout_constraintStart_toStartOf="@+id/text_new"
                app:layout_constraintTop_toBottomOf="@+id/text_new" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image_interesting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="200dp"
                android:layout_margin="16dp"
                android:contentDescription="@string/description_interesting_image"
                app:layout_constraintTop_toBottomOf="@+id/text_interesting_photo" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image_profile"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_margin="8dp"
                android:contentDescription="@string/description_profile_image"
                app:layout_constraintBottom_toBottomOf="@id/image_interesting"
                app:layout_constraintStart_toStartOf="@id/image_interesting" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/username"
                style="@style/TextAppearance.AppCompat.SmallTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/roboto"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@id/image_profile"
                app:layout_constraintTop_toTopOf="@id/image_profile" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/image_profile"
                app:layout_constraintStart_toStartOf="@+id/username"
                app:layout_constraintTop_toBottomOf="@+id/username" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/button_like"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_margin="8dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/description_like"
                android:src="@drawable/icon_like_inactive"
                app:layout_constraintBottom_toBottomOf="@id/image_interesting"
                app:layout_constraintEnd_toEndOf="@id/image_interesting"
                tools:ignore="TouchTargetSizeCheck" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/likes_count_text"
                style="@style/TextAppearance.AppCompat.SmallTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@id/button_like"
                app:layout_constraintEnd_toStartOf="@id/button_like"
                app:layout_constraintTop_toTopOf="@id/button_like" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_home_photos"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/image_interesting"
                app:spanCount="2" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>