<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.openedPhoto.OpenedPhotoFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/description_back_button"
            android:src="@drawable/icon_arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/button_share"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_vertical|end"
            android:layout_margin="8dp"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:contentDescription="@string/description_share_button"
            android:src="@drawable/icon_share"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_share" />

        <com.pets.insplash.presentation.views.UserProfileViewGroup
            android:id="@+id/view_user_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/image"
            app:layout_constraintStart_toStartOf="@+id/image" />

        <com.pets.insplash.presentation.views.LikesViewGroup
            android:id="@+id/view_likes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/image"
            app:layout_constraintEnd_toEndOf="@+id/image" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:src="@drawable/icon_location"
            app:layout_constraintStart_toStartOf="@id/image"
            app:layout_constraintTop_toBottomOf="@id/image" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_location"
            style="@style/TextAppearance.AppCompat.BasicTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:clickable="true"
            app:layout_constraintBottom_toBottomOf="@id/image_location"
            app:layout_constraintStart_toEndOf="@id/image_location" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tags"
            style="@style/TextAppearance.AppCompat.BasicTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textColor="@color/gray"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@+id/text_location" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/val_made_with"
            style="@style/TextAppearance.AppCompat.BasicTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            app:layout_constraintBottom_toBottomOf="@id/made_with"
            app:layout_constraintStart_toEndOf="@id/made_with" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/val_model"
            style="@style/TextAppearance.AppCompat.BasicTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            app:layout_constraintBottom_toBottomOf="@id/model"
            app:layout_constraintStart_toEndOf="@id/model" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/val_exposure"
            style="@style/TextAppearance.AppCompat.BasicTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            app:layout_constraintBottom_toBottomOf="@id/exposure"
            app:layout_constraintStart_toEndOf="@id/exposure" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/val_aperture"
            style="@style/TextAppearance.AppCompat.BasicTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            app:layout_constraintBottom_toBottomOf="@id/aperture"
            app:layout_constraintStart_toEndOf="@id/aperture" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/val_focal_length"
            style="@style/TextAppearance.AppCompat.BasicTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            app:layout_constraintBottom_toBottomOf="@id/focal_length"
            app:layout_constraintStart_toEndOf="@id/focal_length" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/val_iso"
            style="@style/TextAppearance.AppCompat.BasicTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            app:layout_constraintBottom_toBottomOf="@id/iso"
            app:layout_constraintStart_toEndOf="@id/iso" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/val_about"
            style="@style/TextAppearance.AppCompat.BasicTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:gravity="start"
            app:layout_constraintEnd_toEndOf="@+id/tags"
            app:layout_constraintStart_toEndOf="@+id/about"
            app:layout_constraintTop_toTopOf="@id/about" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/made_with"
            style="@style/TextAppearance.AppCompat.BasicTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/made_with"
            app:layout_constraintStart_toStartOf="@id/tags"
            app:layout_constraintTop_toBottomOf="@id/tags" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/model"
            style="@style/TextAppearance.AppCompat.BasicTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/model"
            app:layout_constraintStart_toStartOf="@id/made_with"
            app:layout_constraintTop_toBottomOf="@id/made_with" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/exposure"
            style="@style/TextAppearance.AppCompat.BasicTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/exposure"
            app:layout_constraintStart_toStartOf="@id/model"
            app:layout_constraintTop_toBottomOf="@id/model" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/aperture"
            style="@style/TextAppearance.AppCompat.BasicTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/aperture"
            app:layout_constraintStart_toStartOf="@id/exposure"
            app:layout_constraintTop_toBottomOf="@id/exposure" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/focal_length"
            style="@style/TextAppearance.AppCompat.BasicTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/focal_length"
            app:layout_constraintStart_toStartOf="@id/aperture"
            app:layout_constraintTop_toBottomOf="@id/aperture" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/iso"
            style="@style/TextAppearance.AppCompat.BasicTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/iso"
            app:layout_constraintStart_toStartOf="@id/focal_length"
            app:layout_constraintTop_toBottomOf="@id/focal_length" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/about"
            style="@style/TextAppearance.AppCompat.BasicTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="40dp"
            android:text="@string/about"
            app:layout_constraintBottom_toBottomOf="@id/made_with"
            app:layout_constraintStart_toEndOf="@+id/val_made_with" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/description"
            style="@style/TextAppearance.AppCompat.BasicTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            app:layout_constraintEnd_toEndOf="@+id/val_about"
            app:layout_constraintStart_toStartOf="@id/about"
            app:layout_constraintTop_toBottomOf="@id/about" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_download"
            style="@style/TextAppearance.AppCompat.BasicTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:background="@android:color/transparent"
            android:drawableEnd="@drawable/icon_download"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/description"
            app:layout_constraintTop_toBottomOf="@+id/description" />

        <ProgressBar
            android:id="@+id/progress_circular"
            style="@style/Base.Widget.AppCompat.ProgressBar.BaseStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/image"
            app:layout_constraintEnd_toEndOf="@+id/image"
            app:layout_constraintStart_toStartOf="@+id/image"
            app:layout_constraintTop_toTopOf="@+id/image" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>