<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.profile.ProfileFragment">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/exit_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="8dp"
        android:clickable="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/exit_button_description"
        android:src="@drawable/icon_exit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/logo"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:adjustViewBounds="true"
        android:src="@drawable/icon_user_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/username"
        style="@style/TextAppearance.AppCompat.BasicTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="22sp"
        app:layout_constraintStart_toEndOf="@+id/logo"
        app:layout_constraintTop_toTopOf="@+id/logo" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/gray"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/username"
        app:layout_constraintTop_toBottomOf="@id/username" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/description"
        style="@style/TextAppearance.AppCompat.BasicTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/login"
        app:layout_constraintTop_toBottomOf="@+id/login" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/location_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="6dp"
        android:src="@drawable/icon_location"
        app:layout_constraintStart_toStartOf="@+id/description"
        app:layout_constraintTop_toBottomOf="@+id/description" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/location"
        style="@style/TextAppearance.AppCompat.BasicTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        android:clickable="true"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/location_icon"
        app:layout_constraintStart_toEndOf="@id/location_icon" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/email_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="6dp"
        android:src="@drawable/icon_email"
        app:layout_constraintStart_toStartOf="@+id/location_icon"
        app:layout_constraintTop_toBottomOf="@+id/location_icon" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/email"
        style="@style/TextAppearance.AppCompat.BasicTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/email_icon"
        app:layout_constraintStart_toEndOf="@id/email_icon" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/downloads_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:src="@drawable/icon_download"
        app:layout_constraintStart_toStartOf="@id/email_icon"
        app:layout_constraintTop_toBottomOf="@id/email_icon" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/downloads"
        style="@style/TextAppearance.AppCompat.BasicTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        app:layout_constraintBottom_toBottomOf="@id/downloads_icon"
        app:layout_constraintStart_toEndOf="@id/downloads_icon" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerLikedPhotos"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="64dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/downloads_icon"
        app:spanCount="2" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/empty_list_text"
        style="@style/TextAppearance.AppCompat.BasicTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/gray"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/downloads_icon" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/confirmation_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="60dp"
        android:background="@color/gray"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/confirmation_text"
            style="@style/TextAppearance.AppCompat.BasicTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exit_confirmation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancel_button"
            style="@style/TextAppearance.AppCompat.BasicTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:text="@string/cancel"
            android:textAllCaps="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/confirmation_text" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/logout_button"
            style="@style/TextAppearance.AppCompat.BasicTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:text="@string/exit"
            android:textAllCaps="false"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/confirmation_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>